AUTOMAKE_OPTIONS = gnu

webdir = @WEB_PREFIX@/graphics

dist_web_DATA = \
	arrow-d.gif \
	arrow-dl.gif \
	arrow-dr.gif \
	arrow-l.gif \
	arrow-r.gif \
	arrow-u.gif \
	arrow-ul.gif \
	arrow-ur.gif \
	arrow-l-u.gif \
	arrow-l-d.gif \
	center.gif \
	seq-u.gif \
	seq-d.gif \
	point-g.gif \
	point-o.gif \
	point-r.gif \
	transparent.gif
