AUTOMAKE_OPTIONS = gnu

webdir = @WEB_PREFIX@/lang

dist_web_DATA = \
	big5_big5.php \
	cn_zh.php \
	cs_cz.php \
	de_de.php \
	dk_dk.php \
	en_gb.php \
	en_us.php \
	es_ar.php \
	fr_fr.php \
	he_il.php \
	hu_hu.php \
	it_it.php \
	ja_jp.php \
	nl_nl.php \
	pl_pl.php \
	pt_br.php \
	ro_ro.php \
	ru_ru.php \
	se_se.php
